[package]
name = "batch-blocks"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "batch-blocks"
path = "src/main.rs"

[[bin]]
name = "ohlcv"
path = "src/bin/ohlcv.rs"

[dependencies]
csv = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
