[package]
name = "batch-blocks"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "batch-blocks"
path = "src/main.rs"

[[bin]]
name = "ohlcv"
path = "src/bin/ohlcv.rs"

[[bin]]
name = "sol-swap-parser"
path = "src/bin/sol-swap-parser.rs"

[[bin]]
name = "binance-downloader"
path = "src/bin/binance-downloader.rs"

[[bin]]
name = "enrich-with-cex"
path = "src/bin/enrich-with-cex.rs"

[[bin]]
name = "find-orbitflare-keys"
path = "src/bin/find-orbitflare-keys.rs"

[[bin]]
name = "dex-backfill"
path = "src/bin/dex-backfill.rs"

[[bin]]
name = "dex-backfill-grpc"
path = "src/bin/dex-backfill-grpc.rs"

[dependencies]
base64 = "0.22"
bincode = "1"
bs58 = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clickhouse = "0.14"
const-hex = "1"
csv = "1"
dashmap = "6"
futures = "0.3"
jetstreamer = "0.6"
memmap2 = "0.9"
prost = "0.14"
prost-types = "0.14"
rand = "0.8"
rayon = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.14"
solana-message = "3"
solana-transaction = "3"
solana-transaction-status = "3"
solana-tx-parser = "0.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
zip = "2"

[build-dependencies]
tonic-prost-build = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
